Update fn_pizza_discount_campaign_pool.md